EventHandler::handleGestureLongPress breaks compilation if CONTEXT_MENUS isn't set https://bugs.webkit.org/show_bug.cgi?id=98890

Patch by Luciano Wolf <luciano.wolf@openbossa.org> on 2012-10-10
Reviewed by Caio Marcelo de Oliveira Filho.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleGestureLongPress):

git-svn-id: svn://svn.chromium.org/blink/trunk@130930 bbb929c8-8fbe-4397-9dbb-9b2b20218538