third_party/WebKit/Source/WebCore/page/EventHandler.cpp
@@ -2583,7 +2583,11 @@ bool EventHandler::handleGestureLongPress(const PlatformGestureEvent& gestureEve
             return true;
     }
 #endif
+#if ENABLE(CONTEXT_MENUS)
     return sendContextMenuEventForGesture(gestureEvent);
+#else
+    return false;
+#endif
 }
 
 bool EventHandler::handleGestureScrollUpdate(const PlatformGestureEvent& gestureEvent)
